Fix "Open History" from Recent Tabs

The completion block to open the history wasn't used in the completion
block of the dismiss animation of the Recent Tabs.
This CL fixes it.

Bug: 769022
Change-Id: I0a5c73d02903dc68aba47115dea6880c5027ae86
Reviewed-on: https://chromium-review.googlesource.com/689834
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504972}
Former-commit-id: 475a3ee1523ac83f68f4ac828f9f44c673a97dc3