ios/chrome/browser/ui/ntp/recent_tabs/recent_tabs_handset_coordinator.mm
@@ -5,6 +5,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import "ios/chrome/browser/ui/ntp/recent_tabs/recent_tabs_handset_coordinator.h"
 
+#include "base/ios/block_types.h"
 #include "base/logging.h"
 #import "ios/chrome/browser/ui/ntp/recent_tabs/recent_tabs_handset_view_controller.h"
 #import "ios/chrome/browser/ui/ntp/recent_tabs/recent_tabs_table_coordinator.h"
@@ -19,6 +20,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 @property(nonatomic, strong)
     RecentTabsHandsetViewController* recentTabsViewController;
 @property(nonatomic, strong) RecentTabsTableCoordinator* tableCoordinator;
+// Completion block called once the recentTabsViewController is dismissed.
+@property(nonatomic, assign) ProceduralBlock completion;
 
 @end
 
@@ -29,6 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 @synthesize browserState = _browserState;
 @synthesize dispatcher = _dispatcher;
 @synthesize loader = _loader;
+@synthesize completion = _completion;
 
 - (void)start {
   DCHECK(self.browserState);
@@ -54,7 +58,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 - (void)stop {
   [self.recentTabsViewController dismissViewControllerAnimated:YES
-                                                    completion:nil];
+                                                    completion:self.completion];
+  self.completion = nil;
   [self.tableCoordinator dismissKeyboard];
   [self.tableCoordinator dismissModals];
   [self.tableCoordinator stop];
@@ -64,7 +69,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #pragma mark - RecentTabsHandsetViewControllerCommand
 
-- (void)dismissRecentTabs {
+- (void)dismissRecentTabsWithCompletion:(void (^)())completion {
+  self.completion = completion;
   [self stop];
 }
 
