ios/chrome/browser/ui/ntp/recent_tabs/recent_tabs_handset_view_controller.mm
@@ -91,7 +91,7 @@
 }
 
 - (void)didFinish {
-  [self.commandHandler dismissRecentTabs];
+  [self.commandHandler dismissRecentTabsWithCompletion:nil];
 }
 
 @end
