ios/clean/chrome/browser/ui/recent_tabs/recent_tabs_coordinator.mm
@@ -122,7 +122,7 @@
 
 #pragma mark - RecentTabsHandsetViewControllerCommand
 
-- (void)dismissRecentTabs {
+- (void)dismissRecentTabsWithCompletion:(void (^)())completion {
   [self stop];
 }
 
